--- a/урок9/Domashnee_Zadane/index.html
+++ b/урок9/Domashnee_Zadane/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Lato|Lobster|Open+Sans" rel="stylesheet">
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,16 +39,16 @@
     	<div class="container">
   				<div class="text-box"><input type="search" class="form-control" autofocus placeholder="Введите свою фразу"></div>
   				<div class="fonts">
-  					<p class="resault">Начните писать фразу</p>
+  					<p class="resault open_sans">Начните писать фразу</p>
   					<small>Вот так выглядит шрифт <strong>Open Sans</strong></small>
   					<hr>
-  					<p class="resault">Начните писать фразу</p>
+  					<p class="resault bebas">Начните писать фразу</p>
   					<small>Вот так выглядит шрифт <strong>Bebas</strong></small>
   					<hr>
-  					<p class="resault">Начните писать фразу</p>
+  					<p class="resault lato">Начните писать фразу</p>
   					<small>Вот так выглядит шрифт <strong>Lato</strong></small>
   					<hr>
-  					<p class="resault">Начните писать фразу</p>
+  					<p class="resault lobster">Начните писать фразу</p>
   					<small>Вот так выглядит шрифт <strong>Lobster</strong></small>
   					
   				</div>
