--- a/Выпускная работа/index.html
+++ b/Выпускная работа/index.html
@@ -41,12 +41,12 @@
   			<div class="row">
   				<div class="col-md-offset-1">
   					<ul class="header-spisok">
-  						<li class="header-spisok1">Решения и результаты</li>
-  						<li class="header-spisok1">С какими работаем</li>
-  						<li class="header-spisok1">Системы</li>
-  						<li class="header-spisok1">Почему мы</li>
-  						<li class="header-spisok1">Нам доверяют</li>
-  						<li class="header-spisok1">Что еще</li>
+  						<li class="header-spisok1"><a href="" class="header-ssilka">Решения и результаты</a></li>
+  						<li class="header-spisok1"><a href="" class="header-ssilka">С какими работаем</a></li>
+  						<li class="header-spisok1"><a href="" class="header-ssilka">Системы</a></li>
+  						<li class="header-spisok1"><a href="" class="header-ssilka">Почему мы</a></li>
+  						<li class="header-spisok1"><a href="" class="header-ssilka">Нам доверяют</a></li>
+  						<li class="header-spisok1"><a href="" class="header-ssilka">Что еще</a></li>
   						<i class="fa fa-search"></i>
   					</ul>
   				</div>
