--- a/Выпускная работа/index.html
+++ b/Выпускная работа/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Bootstrap 101 Template</title>
+	<title>Выпускная работа.</title>
 
 	<!-- Bootstrap -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -41,12 +41,12 @@
   			<div class="row">
   				<div class="col-md-offset-1">
   					<ul class="header-spisok">
-  						<li class="header-spisok1"><a href="" class="header-ssilka">Решения и результаты</a></li>
-  						<li class="header-spisok1"><a href="" class="header-ssilka">С какими работаем</a></li>
-  						<li class="header-spisok1"><a href="" class="header-ssilka">Системы</a></li>
-  						<li class="header-spisok1"><a href="" class="header-ssilka">Почему мы</a></li>
-  						<li class="header-spisok1"><a href="" class="header-ssilka">Нам доверяют</a></li>
-  						<li class="header-spisok1"><a href="" class="header-ssilka">Что еще</a></li>
+  						<li class="header-spisok1"><a href="#resheniya" class="header-ssilka">Решения и результаты</a></li>
+  						<li class="header-spisok1"><a href="#s_kem_rabotaem" class="header-ssilka">С какими работаем</a></li>
+  						<li class="header-spisok1"><a href="#sistemi" class="header-ssilka">Системы</a></li>
+  						<li class="header-spisok1"><a href="#pochemu_mi" class="header-ssilka">Почему мы</a></li>
+  						<li class="header-spisok1"><a href="#nam_doveryaut" class="header-ssilka">Нам доверяют</a></li>
+  						<li class="header-spisok1"><a href="#chto_eshe" class="header-ssilka">Что еще</a></li>
   						<i class="fa fa-search"></i>
   					</ul>
   				</div>
@@ -138,7 +138,7 @@
 
   								<div class="row">
   									<div class="header-otstup">
-  										<h1 class="text-center">Решения и результаты внедрения</h1>
+  										<h1 class="text-center" id="resheniya">Решения и результаты внедрения</h1>
   										<p class="text-center resheniya-p">Мы предлагаем, как комплексные решения для компаний,<br> так и готовые решения в конкретных направлениях.</p>
   									</div>
   								</div>
@@ -205,14 +205,14 @@
   								</div>
 
   								<div class="row">
-  									<h1 style="padding-top: 40px" class="text-center">С какими системы мы работаем.</h1>
+  									<h1 style="padding-top: 40px" class="text-center" id="s_kem_rabotaem">С какими системы мы работаем.</h1>
   									<p class="text-center" style="font-size: 18px">Мы работаем со всеми лидерами Российского рынка программного обеспечения. Наши специалисты подберут<br>	 наилучшую систему для Вашего бизнеса. Так же мы готовы реализовать необходимое решение для Вашей <br>организации в выбранной вами системе.</p>
   									<img src="img/sistemi/Лого.png" alt="" style="margin: 35px 0px">
 
   								</div>
 
   								<div class="row text-center target">
-  									<button class="btn btn-default btn-erp tab active" type="submit">СИСТЕМА ERP</button>
+  									<button id="sistemi" class="btn btn-default btn-erp tab active" type="submit">СИСТЕМА ERP</button>
 
   									<button class="btn btn-default btn-crm tab" type="submit">СИСТЕМА CRM</button>
 
@@ -262,7 +262,7 @@
   										</div>
 
   										<div class="row text-center feedback">
-  											<h1>Почему Вам необходимо обратиться к нам?</h1>
+  											<h1 id="pochemu_mi">Почему Вам необходимо обратиться к нам?</h1>
   											<p>Любой бизнес сталкивается с определенным моментом, когда человеческие ресурсы неоправданно<br>
   												увеличивают как финансовые, так и временные затраты на обработку различных данных. Что несет в себе потерю<br> клиентов, прибыли и времени!</p>
 
@@ -371,10 +371,10 @@
 
   																			<div class="row">
   																				<div class="col-md-offset-1">
-  																					<h1 class="text-center" style="padding-top: 55px">Нам доверяют</h1>
+  																					<h1 id="nam_doveryaut" class="text-center" style="padding-top: 55px">Нам доверяют</h1>
   																					<img src="img/doveryaut/1.png" alt="" class="text-center" style="padding-bottom: 100px">
   																					<div class="col-md-6">
-  																						<h1>Еще мы можем предложить</h1>
+  																						<h1 id="chto_eshe" >Еще мы можем предложить</h1>
   																					</div>
 
   																					<div class="col-md-3">
