--- a/Выпускная работа/index.html
+++ b/Выпускная работа/index.html
@@ -31,7 +31,11 @@
   				</span>
   			</div>
   			<div class="col-md-2 col-xs-3  header-soc">
-  				<img src="img/icon-header-social.png" alt="">
+  				<i class="fa fa-vk" aria-hidden="true""></i>
+  				<i class="fa fa-twitter" aria-hidden="true""></i>
+  				<i class="fa fa-facebook-official" aria-hidden="true""></i>
+  				<i class="fa fa-instagram" aria-hidden="true""></i>
+  				<i class="fa fa-youtube" aria-hidden="true""></i>
   			</div>
   		</div>
   	</div>
