--- a/Выпускная работа/index.html
+++ b/Выпускная работа/index.html
@@ -31,11 +31,13 @@
   				</span>
   			</div>
   			<div class="col-md-2 col-xs-3  header-soc">
-  				<i class="fa fa-vk" aria-hidden="true""></i>
-  				<i class="fa fa-twitter" aria-hidden="true""></i>
-  				<i class="fa fa-facebook-official" aria-hidden="true""></i>
-  				<i class="fa fa-instagram" aria-hidden="true""></i>
-  				<i class="fa fa-youtube" aria-hidden="true""></i>
+  			<a href="">
+  					<i class="fa fa-vk" aria-hidden="true""></i>
+  					</a><a href="">
+  						  				<i class="fa fa-twitter" aria-hidden="true""></i></a><a href="">
+  						  					  				<i class="fa fa-facebook-official" aria-hidden="true""></i></a><a href="">
+  						  					  					  				<i class="fa fa-instagram" aria-hidden="true""></i></a><a href="">
+  						  					  					  					  				<i class="fa fa-youtube" aria-hidden="true""></i></a>
   			</div>
   		</div>
   	</div>
