--- a/index.html
+++ b/index.html
@@ -1,11 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>upskills</title>
-	<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	<h1>Мой первый сайт на github.</h1>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Bootstrap 101 Template</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <header>
+    	<div class="container">
+    		<div class="row">
+    			<ul class="text-center header-ul">
+    				<li class="header-li">Home</li>
+    				<li class="header-li">Portfolio</li>
+    				<li class="header-li">About us</li>
+    				<li class="header-li">Contact</li>
+    			</ul>
+    			<div class="col-md-6">
+    				<h1 class="our-h1">OUR STRONG <br> ORGANAISATION</h1>
+    				<p class="our-p">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eius- <br> mod tempor incididunt  ut labore et. ectetur adig ipis cing elit, sed do <br> eiusmod tempor incididunt.</p>
+    				<button class="header-button">Contact us</button>
+    			</div>
+    			<div class="col-md-6">
+    				<video src="https://www.youtube.com/watch?v=VdmuR84VpAE"  height="350px" width="550px" class="header-video"></video>
+    			</div>
+    		</div>
+    	</div>
+    </header>
+	
+	<section id="do_you_know">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-5 DYK">
+					<h1 class="DYK-h1">do you know we can provide for you ?</h1>
+					<p class="DYK-p">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et.Lorem ni ipsum dolor sit amet, consectetur adipis cing elit, ed doi eiusmod tempor incididunt ut labore et.</p>
+					<button class="DYK-button">Learn More</button>
+				</div>
+				<div class="col-md-offset-1 col-md-6 DYK">
+					<div class="row">
+						<div class="col-md-6 DYK-block">
+							<img src="img/DYK/Settings.png" alt="" class="DYK-img">
+							<h4 class="DYK-h4">Managment</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident sequi optio aperiam eveniet voluptates perspiciatis, fugiat alias accusantium. Neque, tempora.</p>
+						</div>
+						<div class="col-md-6 DYK-block">
+							<img src="img/DYK/Pencil.png" alt="" class="DYK-img">
+							<h4 class="DYK-h4">UI /UX Design</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident sequi optio aperiam eveniet voluptates perspiciatis, fugiat alias accusantium. Neque, tempora</p>
+						</div>
+						<div class="col-md-6 DYK-block">
+							<img src="img/DYK/Diamond.png" alt="" class="DYK-img">
+							<h4 class="DYK-h4">Logo / Branding</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident sequi optio aperiam eveniet voluptates perspiciatis, fugiat alias accusantium. Neque, tempora.</p>
+						</div>
+						<div class="col-md-6 DYK-block">
+							<img src="img/DYK/Truck 2.png" alt="" class="DYK-img">
+							<h4 class="DYK-h4">Animation</h4>
+							<p class="DYK-animation">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident sequi optio aperiam eveniet voluptates perspiciatis, fugiat alias accusantium. Neque, tempora.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="feature">
+		<div class="container">
+			<div class="row">			
+				<h1 class="text-center feature-h1">FEATURE PRODUCTS</h1>
+				<p class="text-center feature-p">Lorem ipsum dolor sit amet, consectetur adipis cing elit,sed do eiu- <br>smod tempor incididunt ut labore et.</p>
+			</div>
+		</div>
+	</section>
+
+
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
