--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Выпускной проект 1</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -24,10 +24,10 @@
     	<div class="container">
     		<div class="row">
     			<ul class="text-center header-ul">
-    				<li class="header-li">Home</li>
-    				<li class="header-li">Portfolio</li>
-    				<li class="header-li">About us</li>
-    				<li class="header-li">Contact</li>
+    				<li class="header-li"><a class="header-a" href="">Home</a></li>
+    				<li class="header-li"><a class="header-a" href="">Portfolio</a></li>
+    				<li class="header-li"><a class="header-a" href="">About us</a></li>
+    				<li class="header-li"><a class="header-a" href="">Contact</a></li>
     			</ul>
     			<div class="col-md-6">
     				<h1 class="our-h1">OUR STRONG <br> ORGANAISATION</h1>
@@ -83,9 +83,66 @@
 				<h1 class="text-center feature-h1">FEATURE PRODUCTS</h1>
 				<p class="text-center feature-p">Lorem ipsum dolor sit amet, consectetur adipis cing elit,sed do eiu- <br>smod tempor incididunt ut labore et.</p>
 			</div>
+			<div class="row feature-border">
+			</div>
+			<div class="row">
+				<ul class="feature-ul text-center">
+					<li class="feature-li"><a href="" class="feature-a">ALL</a></li>
+					<li class="feature-li"><a href="" class="feature-a">PRINT TEMPLATE</a></li>
+					<li class="feature-li"><a href="" class="feature-a">WEB TEMPLATE</a></li>
+					<li class="feature-li"><a href="" class="feature-a">USER INTERFACE</a></li>
+					<li class="feature-li"><a href="" class="feature-a">MOCK-UP</a></li>
+				</ul>
+			</div>
+			<div class="row">
+				<div class="col-md-3 feature-img"> <img class="feature-img" src="img/feature/desert-2340326_640.jpg" alt=""></div>
+				<div class="col-md-3 feature-img"> <img class="feature-img" src="img/feature/gorilla-2318998_640.jpg" alt=""></div>
+				<div class="col-md-3 feature-img"> <img class="feature-img" src="img/feature/mushroom-2279558_640.jpg" alt=""></div>
+				<div class="col-md-3 feature-img"> <img class="feature-img" src="img/feature/sculpture-2284945_640.jpg" alt=""></div>
+			</div>
+			<div class="row">
+				<div class="col-md-3 feature-img"> <img class="feature-img" src="img/feature/still-life-2338824_640.jpg" alt=""></div>
+				<div class="col-md-3 feature-img"> <img class="feature-img" src="img/feature/teacup-2325722_640.jpg" alt=""></div>
+				<div class="col-md-3 feature-img"> <img class="feature-img" src="img/feature/tower-bridge-2324875_640.jpg" alt=""></div>
+				<div class="col-md-3 feature-img"> <img class="feature-img" src="img/feature/water-lily-2334209_640.jpg" alt="" style="margin-bottom: 20px"></div>
+			</div>
+		</div>
+	</section>
+	
+
+	<section id="meet">
+		<div class="container">
+			<div class="row">
+				<h1 style="padding-top: 75px" class="meet-h1">MEET OUR TEAM</h1>
+				<p class="meet-p1">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed dooing eiusmod tempor incididut labore Ui / Ux , print template.</p>
+			</div>
 		</div>
 	</section>
 
+	<section id="mark">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3">
+					<img src="img/mark/dog-2332240_640.jpg" alt="" class="img-responsive">
+				</div>
+				<div class="col-md-offset-1 col-md-8">
+					<h4 class="mark-h4">MARK WAUGH</h4>
+					<p class="mark-p">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed dooing eiusmod tempor <br> incididut labore Ui / Ux , print template.</p>
+					<ul class="mark-ul">
+						<li class="mark-li"><a href="" class="mark-a">Facebook</a></li>
+						<li class="mark-li"><a href="" class="mark-a">Dribble</a></li>
+						<li class="mark-li"><a href="" class="mark-a">Behance</a></li>
+						<li class="mark-li"><a href="" class="mark-a">Twitter</a></li>
+					</ul>
+
+					<img src="img/mark/dog-2332240_640.jpg" alt="" class="mark-img">
+					<img src="img/mark/dog-2332240_640.jpg" alt="" class="mark-img">
+					<img src="img/mark/dog-2332240_640.jpg" alt="" class="mark-img">
+					<img src="img/mark/dog-2332240_640.jpg" alt="" class="mark-img">
+				</div>
+			</div>
+		</div>
+	</section>
 
 
 
