--- a/index.html
+++ b/index.html
@@ -143,7 +143,15 @@
 			</div>
 		</div>
 	</section>
+	
 
+	<section id="design_tips">
+		<h1 class="design-h1 text-center">
+			Design tips, tricks, and freebies. Delivered weekly.
+		</h1>
+		<p class="design-p">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod.</p>
+		<input type="email" class="design-input col-md-offset-2" placeholder="Email Adress"><a href="#" class="design-button-a"><button class="design-button">SUBCRIBE</button></a>
+	</section>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
