--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3">
-					<img src="img/mark/dog-2332240_640.jpg" alt="" class="img-responsive">
+					<div class="mark-img1"></div>
 				</div>
 				<div class="col-md-offset-1 col-md-8">
 					<h4 class="mark-h4">MARK WAUGH</h4>
@@ -135,10 +135,20 @@
 						<li class="mark-li"><a href="" class="mark-a">Twitter</a></li>
 					</ul>
 
-					<img src="img/mark/dog-2332240_640.jpg" alt="" class="mark-img">
-					<img src="img/mark/dog-2332240_640.jpg" alt="" class="mark-img">
-					<img src="img/mark/dog-2332240_640.jpg" alt="" class="mark-img">
-					<img src="img/mark/dog-2332240_640.jpg" alt="" class="mark-img">
+					<div class="row">
+						<div class="col-md-3">
+							<div class="mark-img"></div>
+						</div>
+						<div class="col-md-3">
+							<div class="mark-img"></div>
+						</div>
+						<div class="col-md-3">
+							<div class="mark-img"></div>
+						</div>
+						<div class="col-md-3">
+							<div class="mark-img"></div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -151,6 +161,43 @@
 		</h1>
 		<p class="design-p">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod.</p>
 		<input type="email" class="design-input col-md-offset-2" placeholder="Email Adress"><a href="#" class="design-button-a"><button class="design-button">SUBCRIBE</button></a>
+	</section>
+
+
+
+	<section id="get">
+		<div class="container">
+			<div class="row">
+				<h1 class="get-h1">GET IN TOUCH</h1>
+				<p class="get-p1">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt ut <br> labore et.ur adipis cing elit, sed do eiusmod tempor incididunt ut labore  et. ur adipis cing elit, <br> sed do eiusmod tempor incididunt ut labore et.</p>
+				<div class="get-border"></div>
+			</div>
+			<div class="row get-forma">
+				<div class="col-md-7">
+					<div class="row">
+						<div class="col-md-6"><input type="text" placeholder="NAME" class="get-input"></div>
+						<div class="col-md-6"><input type="text" placeholder="YOUR MAIL" class="get-input" style="float: right;"></div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<textarea name="#" id="" cols="30" rows="10" placeholder="TYPE YOUR TEXT" class="get-textarea"></textarea>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<button class="get-button">SEND MESSAGE</button>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-md-offset-1 get-black">
+					<h4 class="get-h4">CONTACT INFO</h4>
+					<p>Jalalabad 24 / A, Ambaarkhana, Sylhet, <br>Bangladesh</p>
+					<p>redwan@deviserweb.com</p>
+					<p>(+88) 017 617 46373</p>
+				</div>
+			</div>
+
+		</div>
 	</section>
 
 
