--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
 		<input type="email" class="design-input col-md-offset-2" placeholder="Email Adress"><a href="#" class="design-button-a"><button class="design-button">SUBCRIBE</button></a>
 	</section>
 
+	
 
-
-	<section id="get">
+	<section id="get" class="get">
 		<div class="container">
 			<div class="row">
 				<h1 class="get-h1">GET IN TOUCH</h1>
@@ -199,6 +199,24 @@
 
 		</div>
 	</section>
+
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
+					<p class="footer-p">© Copyright @Junaed 2016, All rights reserved.</p>
+				</div>
+				<div class="col-md-offset-5 col-md-3">
+					<ul class="footer-ul">
+						<li class="footer-li"><a href="" class="footer-a"><img src="img/footer/1468368398_Twitter_Rounded_Solid.png" alt="" class="footer-img"></a></li>
+						<li class="footer-li"><a href="" class="footer-a"><img src="img/footer/1468368407_LinkedIn_Rounded_Solid.png" alt="" class="footer-img"></a></li>
+						<li class="footer-li"><a href="" class="footer-a"><img src="img/footer/1468368412_Google_Rounded_Solid.png" alt="" class="footer-img"></a></li>
+						<li class="footer-li"><a href="" class="footer-a"><img src="img/footer/1468368389_Facebook_Rounded_Solid.png" alt="" class="footer-img"></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
