--- a/Выпускная работа/index.html
+++ b/Выпускная работа/index.html
@@ -34,9 +34,13 @@
   			<a href="">
   					<i class="fa fa-vk" aria-hidden="true""></i>
   					</a><a href="">
-  						  				<i class="fa fa-twitter" aria-hidden="true""></i></a><a href="">
-  						  					  				<i class="fa fa-facebook-official" aria-hidden="true""></i></a><a href="">
-  						  					  					  				<i class="fa fa-instagram" aria-hidden="true""></i></a><a href="">
+  						  				<i class="fa fa-twitter" aria-hidden="true""></i></a>
+  						  				<a href="">
+  						  					  				<i class="fa fa-facebook-official" aria-hidden="true""></i></a>
+  						  					  				<a href="">
+  						  					  					  				<i class="fa fa-instagram" aria-hidden="true""></i>
+  						  					  					  				</a>
+  						  					  					  				<a href="">
   						  					  					  					  				<i class="fa fa-youtube" aria-hidden="true""></i></a>
   			</div>
   		</div>
@@ -229,6 +233,17 @@
   									<button class="btn btn-default btn-wms tab" type="submit">СИСТЕМА WMS</button>
 
   									<button class="btn btn-default btn-it tab" type="submit">ИТ ИНФРАСТРУКТУРА</button>
+
+  									<ul class="nav nav-tabs tab text-center" role="tablist">
+  									<li  class="btn btn-default tab-li" role="presentation" class="active"><a class="tab-a" href="#home" aria-controls="home" role="tab" data-toggle="tab"><button class="btn btn-default btn-crm tab" type="submit">СИСТЕМА CRM</button></a></li>
+  									<li  class="btn btn-default tab-li" role="presentation"><a class="tab-a" href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
+  									<li  class="btn btn-default tab-li" role="presentation"><a class="tab-a" href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
+  									<li  class="btn btn-default tab-li" role="presentation"><a class="tab-a" href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
+  									</ul>
+
+
+
+
   									<p class="erp-p">ERP - (Entreprise resurs planning) система планирования ресурсами предприятия. <br>
   										Изначально узкоспециализированный класс систем, для планирования производства.</p>
   										<p class="erp-p1">В современном прочтении - это комплексная информационная система для учета ЛЮБОЙ хозяйственной деятельности компании:</p>
