--- a/Выпускная работа/index.html
+++ b/Выпускная работа/index.html
@@ -21,11 +21,11 @@
   </head>
   <body>
   	<div class="container">
-  		<div class="row header-top">
-  			<div class="col-md-2 col-md-offset-6  col-xs-3 text-center">
+  		<div class="row header-top text-center">
+  			<div class="col-md-2 col-md-offset-5  col-xs-3 text-center">
   				<p>info@it-rules.ru</p>
   			</div>
-  			<div class="col-md-2 col-xs-3 ">
+  			<div class="col-md-3 col-xs-3 ">
   				<span class="phone">
   					+7 (495) 380-37-74 
   				</span>
