--- a/Выпускная работа/index.html
+++ b/Выпускная работа/index.html
@@ -228,15 +228,33 @@
   									<li  class="btn btn-default tab-li" role="presentation"><a class="tab-a" href="#profile" aria-controls="profile" role="tab" data-toggle="tab"><button class="btn btn-default btn-crm tab" type="submit">СИСТЕМА CRM</button></a></li>
   									<li  class="btn btn-default tab-li" role="presentation"><a class="tab-a" href="#messages" aria-controls="messages" role="tab" data-toggle="tab"><button class="btn btn-default btn-bi tab" type="submit">BI</button></a></li>
                     <li  class="btn btn-default tab-li" role="presentation"><a class="tab-a" href="#settings" aria-controls="settings" role="tab" data-toggle="tab"><button class="btn btn-default btn-csm tab" type="submit">CSM</button></a></li>
-                    <li  class="btn btn-default tab-li" role="presentation"><a class="tab-a" href="#settings" aria-controls="settings" role="tab" data-toggle="tab"><button class="btn btn-default btn-wms tab" type="submit">CИСТЕМА WMS</button></a></li>
-  									<li  class="btn btn-default tab-li" role="presentation"><a class="tab-a" href="#settings" aria-controls="settings" role="tab" data-toggle="tab"><button class="btn btn-default btn-it tab" type="submit">ИТ ИНФРАСТРУКТУРА</button></a></li>
+                    <li  class="btn btn-default tab-li" role="presentation"><a class="tab-a" href="#WMS" aria-controls="settings" role="tab" data-toggle="tab"><button class="btn btn-default btn-wms tab" type="submit">CИСТЕМА WMS</button></a></li>
+  									<li  class="btn btn-default tab-li" role="presentation"><a class="tab-a" href="#it" aria-controls="settings" role="tab" data-toggle="tab"><button class="btn btn-default btn-it tab" type="submit">ИТ ИНФРАСТРУКТУРА</button></a></li>
   									</ul>
 
                     
 
 
-  									<p class="erp-p" id="home profile messages settings">ERP - (Entreprise resurs planning) система планирования ресурсами предприятия. <br>
-  										Изначально узкоспециализированный класс систем, для планирования производства.</p>
+  									<div class="tab-content">
+    <div role="tabpanel" class="tab-pane active erp-p" id="home">ERP - (Entreprise resurs planning) система планирования ресурсами предприятия.   <br>
+Изначально узкоспециализированный класс систем, для планирования производства.
+</div>
+    <div role="tabpanel" class="tab-pane erp-p" id="profile">СИСТЕМА CRM -  система планирования ресурсами предприятия.   <br>
+Изначально узкоспециализированный класс систем, для планирования производства.
+</div>
+    <div role="tabpanel" class="tab-pane erp-p" id="messages">BI -  система планирования ресурсами предприятия.  <br>
+Изначально узкоспециализированный класс систем, для планирования производства.
+</div>
+    <div role="tabpanel" class="tab-pane erp-p" id="settings">CSM -  система планирования ресурсами предприятия.  <br>
+Изначально узкоспециализированный класс систем, для планирования производства.
+</div>
+    <div role="tabpanel" class="tab-pane erp-p" id="WMS">WMS -  система планирования ресурсами предприятия.  <br>
+Изначально узкоспециализированный класс систем, для планирования производства.
+</div>
+    <div role="tabpanel" class="tab-pane erp-p" id="it">ИТ ИНФРАСТРУКТУРА -  система планирования ресурсами предприятия.  <br>
+Изначально узкоспециализированный класс систем, для планирования производства.
+</div>
+  </div>
   										<p class="erp-p1">В современном прочтении - это комплексная информационная система для учета ЛЮБОЙ хозяйственной деятельности компании:</p>
 
   									</div>
