--- a/Выпускная работа/index.html
+++ b/Выпускная работа/index.html
@@ -414,7 +414,7 @@
   																			<div class="row">
   																				<div class="col-md-offset-1">
   																					<h1 id="nam_doveryaut" class="text-center" style="padding-top: 55px">Нам доверяют</h1>
-  																					<img src="img/doveryaut/1.png" alt="" class="text-center" style="padding-bottom: 100px">
+  																					<img src="img/doveryaut/1.png" alt="" class="text-center" style="padding-bottom: 50px">
   																					<div class="col-md-6">
   																						<h1 id="chto_eshe" >Еще мы можем предложить</h1>
   																					</div>
@@ -452,7 +452,7 @@
   																</div> <!-- container -->
 
   																<div class="container">
-  																	<div class="row footer">
+                                    <footer class="footer">
   																		<div class="col-md-6">
   																			<span class="footer-span">ООО «ВИДЕО ПРАВИЛА» Можайское ш 112А , работаем с учетом НДС 18% </span>
   																		</div>
@@ -465,7 +465,7 @@
   																				+7 (495) 380-37-74 
   																			</span>
   																		</div>
-  																	</div>
+                                    <footer>
   																</div>
 
 
