Выпускной проект - 1 изменения.
Для Артема Исламова.

--- a/Выпускная работа/index.html
+++ b/Выпускная работа/index.html
@@ -452,15 +452,15 @@
   																</div> <!-- container -->
 
   																<div class="container">
-                                    <footer class="footer">
+                                    <footer class="footer text-center">
   																		<div class="col-md-6">
   																			<span class="footer-span">ООО «ВИДЕО ПРАВИЛА» Можайское ш 112А , работаем с учетом НДС 18% </span>
   																		</div>
 
-  																		<div class="col-md-2 col-md-offset-2 text-center">
+  																		<div class="col-md-2 col-md-offset-1 text-center">
   																			<p class="footer-p">info@it-rules.ru</p>
   																		</div>
-  																		<div class="col-md-2">
+  																		<div class="col-md-3">
   																			<span class="footer-phone">
   																				+7 (495) 380-37-74 
   																			</span>
