--- a/Выпускная работа/index.html
+++ b/Выпускная работа/index.html
@@ -365,7 +365,7 @@
 
 
         <!-- Nav tabs -->
-        <ul class="nav nav-tabs text-center" role="tablist">
+        <ul class="nav nav-tabs" role="tablist">
           <li role="presentation" class="active "><a class="etapi-a" href="#home" aria-controls="home" role="tab" data-toggle="tab">        <div class="col-md-12 etapi-1">
             <img src="img/etapi/1.png" alt="">
             <h4 class="etapi-h4">1 этап</h4>
