--- a/Выпускная работа/index.html
+++ b/Выпускная работа/index.html
@@ -385,7 +385,7 @@
             <div class="col-md-12 etapi-4 etapi-4etap">
               <img src="img/etapi/2.png" alt="">
               <h4 class="etapi-h4">4 этап</h4>
-              <p>Промышленная эксплуатация</p>
+              <p>Промышленная<br> эксплуатация</p>
             </div></a></li>
             <li role="presentation" class="etapi-li"><a class="etapi-a" href="#hom2" aria-controls="settings" role="tab" data-toggle="tab">
 
@@ -496,23 +496,23 @@
 
         
 
-      <div class="containter">
-        <div class="header-fon">
+      <div class="containter text-center">
+        <div class="predlogenie">
          <div class="row">
-          <div class="col-md-offset-1">
+          <div class="">
            <h1 id="nam_doveryaut" class="text-center" style="padding-top: 55px">Нам доверяют</h1>
            <img src="img/doveryaut/1.png" alt="" class="text-center" style="padding-bottom: 50px">
            <div class="col-md-6">
             <h1 id="chto_eshe" >Еще мы можем предложить</h1>
           </div>
 
-          <div class="col-md-3">
+          <div class="col-md-3 col-md-offset-2">
             <img src="img/predlogenie/foto.png" alt="" class="predlogenie-img">
           </div>
         </div>
       </div>
 
-      <div class="row predlogenie">
+      <div class="row ">
         <div class="predlogenie-fon">
          <div class="col-md-offset-1">
           <div class="col-md-3">
@@ -528,7 +528,7 @@
          </div>
 
          <div class="row">
-           <button class="zakazat predlogenie-button">Заказать</button><span class="zakazat-span predlogenie-button predlogenie-span">Закажите бесплатное задание!</span>
+           <button class="zakazat predlogenie-button" style="float: left;">Заказать</button><span class="zakazat-span predlogenie-button predlogenie-span">Закажите бесплатное техническое задание!</span>
          </div>
        </div>
      </div>
