--- a/Выпускная работа/index.html
+++ b/Выпускная работа/index.html
@@ -83,7 +83,7 @@
     <div class="popup" id="modal-1">
       <a href="#close" class="popup-close">&times;</a>
       <h4 class="text-center">
-        Заказать бесплатное техническое задание
+        Заказать бесплатное  задание
       </h4>
       <p>Чтоы наш менеджер набрал Вам в ближайщее время, пожалуйста заполните форму ниже</p>
       <form action="">
