--- a/Выпускная работа/index.html
+++ b/Выпускная работа/index.html
@@ -328,7 +328,7 @@
     увеличивают как финансовые, так и временные затраты на обработку различных данных. Что несет в себе потерю<br> клиентов, прибыли и времени!</p>
 
     <div class="col-md-3 feedback-block">
-     <img src="img/feedback/16.png" class="feedback-img" alt=""><br>
+     <img src="img/feedback/16.png" class="feedback-img" alt="" ><br>
      <p>Собственный успешный
       опыт развития компании с количеством сотрудников более 1000 человек</p>
     </div>
@@ -366,8 +366,10 @@
            <img src="img/feedback/23.png" class="feedback-img" alt=""><br>
            <p>Мы знаем, что вам потребуется внедрять в будущем!  Подойдем к вопросу с позиции экономии вашего времени, усилий и финансовых затрат!</p>
          </div>
-         <h4>Мы предложим Вам одни из самых выгодных условий как по срокам, так и по стоимости!</h4>
+
+         
        </div> <!-- row -->
+       <h4 class="feedback-h4 text-center">Мы предложим Вам одни из самых выгодных условий как по срокам, так и по стоимости!</h4>
 
 
 
