--- a/Выпускная работа/index.html
+++ b/Выпускная работа/index.html
@@ -79,7 +79,7 @@
     </div>
   </div>
 
-  <div class="row bazi-dannih">
+  <div class="row bazi-dannih text-center">
     <div class="col-md-offset-1">
      <div class="col-md-7 header-otstup">
       <h1>Базы данных ERP CRM 1C</h1>
@@ -571,7 +571,7 @@
 
   <div class="container">
     <footer class="footer text-center">
-      <div class="col-md-6">
+      <div class="col-md-6 col-xs-12">
        <span class="footer-span">ООО «ВИДЕО ПРАВИЛА» Можайское ш 112А , работаем с учетом НДС 18% </span>
      </div>
 
