--- a/Выпускная работа/index.html
+++ b/Выпускная работа/index.html
@@ -115,12 +115,12 @@
 
 <div class="row erc-crm">
   <div class="col-md-offset-1 header-span-otstup">
-   <div class="col-md-4">
+   <div class="col-md-4 mobile-header">
     <span class="header-span-bold">ERC - </span><span>прибыль и ваше свободное время.</span><br>
     <span class="header-span-bold">CRM - </span><span>новые продожа вашим старым клиентам.</span><br>
     <span class="header-span-bold">BI - </span><span>быстрая и точная проверка вашего бизнеса.</span>
   </div>
-  <div class="col-md-5 ">
+  <div class="col-md-5">
     <span class="header-span-bold">CSM - </span><span>оперативное исполнение ваших поручений без бумаги.</span><br>
     <span class="header-span-bold">ИТ ИНФРАСТРУКТУРА - </span><span>недавная работа бизнеса и ваше спокойствие 24/7.</span><br>
   </div>
