--- a/САЙТ/index.html
+++ b/САЙТ/index.html
@@ -129,7 +129,7 @@
   				<div class="row">
   					<h1 class="sobst_proizv-h1">СОБСТВЕННОЕ ПРОИЗВОДСТВО ТЕХНИЧЕСКОЙ ТРУБЫ ПНД</h1>
   					<div class="proizv-border"></div>
-  					<div class="col-md-7">
+  					<div class="col-md-7 sobs_proizv-icon">
   						<a href="#" class="header-icon"><img src="img/header/icon.png" alt="" ><span class="header-span" style="margin-right: 25px">999 тонн трубы производится в месяц</span></a>	
   						<a href="#" class="header-icon"><img src="img/header/icon.png" alt="" ><span class="header-span">2 склада с готовой продукцией</span></a>	<br>
   						<a href="#" class="header-icon"><img src="img/header/icon.png" alt="" ><span class="header-span" style="margin-right: 73px">2 склада с готовой продукцией</span></a>	
